@@ -1,4 +1,4 @@
-# $Id: Makefile.defs,v 1.377 2006/10/13 13:08:42 vlada Exp $
+# $Id: Makefile.defs,v 1.378 2006/10/16 18:44:01 andrei Exp $
 #
 # makefile defs (CC, LD,a.s.o)
 #
@@ -67,7 +67,7 @@ MAIN_NAME=ser
 VERSION = 0
 PATCHLEVEL = 10
 SUBLEVEL =   99
-EXTRAVERSION = -dev52-tm_fixes
+EXTRAVERSION = -dev53-tm_fixes
 
 SER_VER = $(shell expr $(VERSION) \* 1000000 + $(PATCHLEVEL) \* 1000 + \
 			$(SUBLEVEL) )
