@@ -1,5 +1,5 @@
 /* 
- * $Id: case_www.h,v 1.6 2005/02/23 17:16:07 andrei Exp $ 
+ * $Id: case_www.h,v 1.7 2006/10/16 18:44:02 andrei Exp $ 
  *
  * WWW-Authenticate Header Field Name Parsing Macros
  *
@@ -35,7 +35,7 @@
 #define CATE_CASE                        \
         switch(LOWER_DWORD(val)) {       \
         case _cate_:                     \
-                hdr->type = HDR_WWWAUTH_T; \
+                hdr->type = HDR_WWW_AUTHENTICATE_T; \
                 p += 4;                  \
 	        goto dc_end;             \
         }
